--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -1,108 +1,101 @@
-<h2><%=l(:control_fee)%>. Utenti: <%= @num_users %></h2>
+<h2><%=l(:control_fee)%>. TOTALE UTENTI: <%= @num_users %></h2>
   <div id="footer-menu" class="box">
     <%= render_menu :menu_fee_fs %>
   </div>
-  In questa pagina:
-  <ul>
-    <li>Pulsante per verificare tutti gli abbonamenti</li>
-    <li>Lista numero utenti per ruolo </li>
-    <li>Menu per le singole pagine di gestione</li>
-    <li>Ricerca di un utente con redirect alla pagina dell'utente</li>
-  </ul>
-
 
 <div class="splitcontentleft">
   <fieldset class="box tabular">
-    <legend>Ruoli non sottoposti a controllo di abbonamento</legend>
+    <legend>Ruoli non sottoposti a controllo di abbonamento&nbsp;<b>Totali: <%= @num_uncontrolled_TOTAL %></b></legend>
     <blockquote>
-  ROLE_MANAGER        = 3  #Manager<br />
-  ROLE_AUTHOR         = 4  #Redattore  <br />
-  #ROLE_COLLABORATOR   = 4  #ROLE_REDATTORE   autore, redattore e collaboratore tutti uguali<br />
-  ROLE_VIP            = 10 #Invitato Gratuito<br />
+<p class="admin"><b>[<%= @name_admin_count %>]</b>Amministratore del sito (interfaccia redmine)</p>
+<p class="power_user"><b>[<%= @name_manager_count %>]</b>ROLE_MANAGER        = 3  #Manager</p>
+<p class="redattore"><b>[<%= @name_author_count %>]</b>ROLE_AUTHOR         = 4  #Redattore<br />
+  #ROLE_COLLABORATOR   = 4  #ROLE_REDATTORE   autore, redattore e collaboratore tutti uguali</p>
+<p class="invitato"><b>[<%= @name_invitati_count %>]</b>ROLE_VIP            = 10 #Invitato Gratuito</p>
     </blockquote>
-
+<hr>
     <h5>
-      Utenti <%= @num_users %><br />
-      Numero amministratori: <b><%= @num_admin %></b><br />
-      con ruoli di gestione interna all'editoriale non sottoposto a controllo di abbonamento<br />
+      <p class="admin">Amministratori <b><%= @name_admin_count %></b></p>
     </h5>
-    <%= @name_admin %>
-
+    <% @name_admin.each do |usr| %>
+      <div class="icon icon-admin"><%= link_to usr, user_path(usr) %></div>
+    <% end %>
+<hr>
     <h5>
-      Numero power_user: <b><%= @num_power_user %></b><br />
+      <p class="power_user">Manager (=power_user): <b><%= @name_manager_count %></b></p>
     </h5>
-    <%= @name_power_user %>
+    <% @name_manager.each do |usr| %>
+      <div class="icon icon-man"><%= link_to usr, user_path(usr) %></div>
+    <% end %>
+<hr>
     <h5>
-      Numero manager (=power_user): <b><%= @num_manager %></b><br />
+      <p class="redattore">Redattori: <b><%= @name_author_count %></b></p>
     </h5>
-    <%= @name_manager %>
-
-    <ul>
-      <li>Numero di redattori: <b><%= @num_author %></b></li>
-    </ul>
-    <%= @name_author %>
-    <ul>
-      <li style="display: none;">Numero di collaboratori: <b><%= @num_collaboratori %></b>
-        <%= @name_collaboratori %>
-      </li>
-    </ul>
-    <ul>
-      <li>Numero di invitati: <b><%= @num_invitati %></b></li>
-    </ul>
-    <%= @name_invitati %>
-
+    <% @name_author.each do |usr| %>
+      <div class="icon icon-auth"><%= link_to usr, user_path(usr) %></div>
+    <% end %>
+<hr>
+    <h5>
+      <p class="invitato">VIP: <b><%= @name_invitati_count %></b>
+    </h5>
+    <% @name_invitati.each do |usr| %>
+      <div class="icon icon-vip"><%= link_to usr, user_path(usr) %></div>
+    <% end %>
+<hr>
   </fieldset>
 </div>
 
 <div class="splitcontentright">
   <fieldset class="box tabular">
-    <legend><%=l(:siglatipo)%></legend>
+    <legend>Ruoli sottoposti a controllo di abbonamento (manuale ed automatico)&nbsp;<b>Totali: <%= @num_controlled_TOTAL %></b></legend>
     <blockquote>
-      Organismi al quale si riferiscono: Cross organizations ed utenti
+<p class="abbonato"><b>[<%= @num_abbonati %>]</b> ROLE_ABBONATO       = 6  #Abbonato user.data_scadenza > (today - Setting.renew_days)</p>
+<p class="inscadenza"><b>[<%= @num_rinnovamento %>]</b>ROLE_RENEW          = 11  #Rinnovo: periodo prima della scadenza dipende da Setting.renew_days<br />Numero di abbonati in stato di rinnovamento (Scadenza - <%= Setting.renew_days%> giorni)</p>
+<p class="registrato"><b>[<%= @num_registrati %>]</b>ROLE_REGISTERED     = 9  #Ospite periodo di prova durante Setting.register_days<br />Con periodo di prova (Data di registrazione + <%= Setting.register_days%> giorni)</p>
+<p class="espirato"><b>[<%= @num_scaduti %>]</b>ROLE_EXPIRED        = 7  #Scaduto: user.data_scadenza &lt; today</p>
+<p class="archivied"><b>[<%= @num_archiviati %>]</b>ROLE_ARCHIVIED      = 8  #Archiviato: bloccato: puo uscire da questo stato solo manualmente ("Ha pagato", "invito di prova"=REGISTERED, cambio ruolo...)</p>
     </blockquote>
-    <ul>
-      <li>Numero di cross organismi: <b><%= @num_organismi %></b></li>
-      <li>Numero di utenti che si riferiscono: <b><%= @num_members %></b></li>
-    </ul>
   </fieldset>
 </div>
-
 
 <div class="splitcontentright">
   <fieldset class="box tabular">
     <legend><%=l(:affiliati)%>&nbsp;<b>Totali: <%= @num_associated_TOTAL %></b></legend>
-    <h5>
-      Organismi associati
-    </h5>
     <ul>
-      <li>Numero di organismi associati: <b><%= @num_Associations %></b></li>
-      <li>Numero di membri (soci) <b>NON PAGANTI: <%= @num_Associated %></b></li>
+      <li>ASSOCIAZIONE Numero di organismi associati: <b><%= @num_Associations %></b></li>
+      <li>ASSOCIATI NON PAGANTI: Numero di membri (soci) <b> <%= @num_Associated_COUNT %></b></li>
     </ul>
-    Dettaglio degli Utenti Non paganti
+    Dettaglio dello stato degli Utenti associati e quindi Non paganti
     <ul>
-      <li>utenti con abbonamento valido: <b><%= @num_Associated_ABBONATO %></b></li>
-      <li>utenti in rinnovo: <b><%= @num_Associated_Scadenza_RENEW %></b></li>
-      <li>utenti con abbonamento scaduto <b><%= @num_Associated_EXPIRED %></b></li>
-      <li>utenti archiviati <b>NON PAGANTI: <%= @num_Associated_ARCHIVIED %></b></li>
+      <li class="icon icon-abbo"><b>[<%= @num_Associated_ABBONATO %>]</b> associati con abbonamento valido</li>
+      <li class="icon icon-reg"><b>[<%= @num_Associated_REGISTERED %>]</b> associati in registrazione</li>
+      <li class="icon icon-renew"><b>[<%= @num_Associated_RENEW %>]</b> associati in rinnovo</li>
+      <li class="icon icon-exp"><b>[<%= @num_Associated_EXPIRED %>]</b> associati con abbonamento scaduto </li>
+      <li class="icon icon-arc"><b>[<%= @num_Associated_ARCHIVIED %>]</b> associati archiviati </li>
     </ul>
   </fieldset>
 </div>
 
 <div class="splitcontentright">
   <fieldset class="box tabular">
-    <legend><%=l(:who_pay)%></legend>
-    <h5>
-      Privati
-    </h5>
+    <legend><%=l(:who_pay)%>&nbsp;<b>Totali: <%= @num_privati_TOTAL %></b></legend>
     <ul>
-      <li>Numero di utenti senza affiliazione <b>: <%= @num_maybe_privati %></b></li>
-      <li>Numero di PRIVATI: <b><%= @num_privati %></b> (<%= @num_maybe_privati - @num_privati %>)</li>
-      <li>Numero di <b>PRIVATI ATTIVI: <%= @num_active %></b></li>
+      <li>PRIVATI PAGANTI: Numero di utenti senza affiliazione <b>: <%= @num_privati_COUNT %></b></li>
     </ul>
+    Dettaglio dei privati paganti
+    <ul>
+      <li class="icon icon-abbo"><b>[<%= @num_privati_ABBONATO %>]</b> privati con abbonamento valido</li>
+      <li class="icon icon-reg"><b>[<%= @num_privati_REGISTERED %>]</b> privati in registrazione</li>
+      <li class="icon icon-renew"><b>[<%= @num_privati_RENEW %>]</b> privati in rinnovo</li>
+      <li class="icon icon-exp"><b>[<%= @num_privati_EXPIRED %>]</b> privati con abbonamento scaduto </li>
+      <li class="icon icon-arc"><b>[<%= @num_privati_ARCHIVIED %>]</b> privati archiviati </li>
+    </ul>
+  </fieldset>
+</div>
 
-    <blockquote>
-      Utenti senza ruolo: <b><%= @num_no_role %></b>
-    </blockquote>
+<div class="splitcontentright">
+  <fieldset class="box tabular">
+    <legend>Utenti senza ruolo: <b><%= @num_no_role %></b></legend>
     <% form_tag({:action => 'index', :verify => 1}, :class => "tabular") do %>
       <%= submit_tag l(:button_verify) %>
     <% end %>
@@ -111,7 +104,8 @@
       <div id="fs_informa" class="nodata">
         <ul style="text-align: left;">
           <% @msg.each_with_index do |say, index| %>
-            <li><%= index.to_s + '-' + say%></li>
+            <%# index.to_s + ' - ' + say%>
+            <li><%= say %></li>
           <% end %>
         </ul>
       </div>
@@ -123,21 +117,13 @@
 
 <div class="splitcontentleft">
   <fieldset class="box tabular">
-    <legend>Ruoli sottoposti a controllo di abbonamento (manuale ed automatico)</legend>
-    <blockquote>
-  ROLE_ABBONATO       = 6  #Abbonato user.data_scadenza > (today - Setting.renew_days)<br />
-  ROLE_RENEW          = 11  #Rinnovo: periodo prima della scadenza dipende da Setting.renew_days<br />
-  ROLE_REGISTERED     = 9  #Ospite periodo di prova durante Setting.register_days<br />
-  ROLE_EXPIRED        = 7  #Scaduto: user.data_scadenza < today<br />
-  ROLE_ARCHIVIED      = 8  #Archiviato: bloccato: puo uscire da questo stato solo manualmente ("Ha pagato", "invito di prova"=REGISTERED, cambio ruolo...)<br />
-    </blockquote>
+    <legend><%=l(:siglatipo)%></legend>
+    <h5>
+      Categoria Utenti: Cross organizations ed utenti
+    </h5>
     <ul>
-      <li>Numero di abbonati: <%= @num_abbonati %></li>
-      <li>Numero di abbonati in stato di rinnovamento (Scadenza - <%= Setting.renew_days%> giorni): <%= @num_rinnovamento %></li>
-      <li>Numero di registrati: <%= @num_registrati %>. Con periodo di prova (Data di registrazione + <%= Setting.register_days%> giorni)</li>
-      <li>Numero di scaduti: <%= @num_scaduti %></li>
-      <li>Numero di archiviati: <%= @num_archiviati %></li>
+      <li>Numero di cross organismi: <b><%= @num_organismi %></b></li>
+      <li>Numero di utenti che si riferiscono: <b><%= @num_members %></b></li>
     </ul>
   </fieldset>
-
 </div>
