newsletter fe ... status=20%

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-EN" xmlns="http://www.w3.org/1999/html">
 <head><!-- Created by DomThu & SPecchiaSoft -->
-  <meta charset="utf-8"/>
+   <meta charset="utf-8"/>
   <title>FiscoSport (tartist v.5) <%= h html_title %></title>
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width"/>
   <meta name="description" content="<%= Redmine::Info.app_name %>"/>
@@ -20,7 +20,7 @@
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
   -->
   <%= stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
-  <%= stylesheet_link_tag 'application_fs', :media => 'all' %>
+  <%# stylesheet_link_tag 'application_fs', :media => 'all' %>
   <%= stylesheet_link_tag 'editorial', :media => 'print' %>
   <!--   styles per il Front End  -->
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
