--- a/app/views/editorial/ediz_sicontents.html.erb
+++ b/app/views/editorial/ediz_sicontents.html.erb
@@ -25,64 +25,78 @@ In questa pagina:
 
 </style>
  -->
+<table border="1">
+  <tr>
+    <td><b>Column 1</b></td>
+    <td><b>Column 2</b></td>
+  </tr>
+  <tr>
+    <td rowspan="2">Row 1 Cell 1</td>
+    <td>Row 1 Cell 2</td>
+  </tr>
+  <tr>
+    <td>Row 2 Cell 2</td>
+
+  </tr>
+  <tr>
+    <td colspan="2">Row 3 Cell 1</td>
+  </tr>
+</table>
 <% ancora ="" %>
+
+<!-- inizio sezione loop articoli -->
 <% @art.each do |articolo| %>
     <% ancora = h(truncate(articolo.titolo, :length => 20).to_slug) %>
-
-
     <table width="612" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td width="612" align="right" valign="top" bgcolor="#f4f4f4" style="border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;">
-
-          <table width="600" border="0" cellpadding="0" cellspacing="8">
+        <td width="612" align="center" valign="top" bgcolor="#f4f4f4" style="border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;">
+          <!-- inizio tabella contenuti -->
+          <table width="594" border="0" cellpadding="0" cellspacing="9">
             <tr>
-              <td width="120" align="left" valign="top" colspan="2">
+              <!-- sotto: immagine sx -->
+              <td width="120" align="left" valign="top" rowspan="2">
                 <%= if articolo.immagine_url.nil?
                       if FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")
-                        image_tag("/images/commons/sections/#{articolo.top_section.immagine}", :width => 120)
+                        image_tag("/images/commons/sections/#{articolo.top_section.immagine}", :width => 120 , :id => ancora)
                       else
-                        image_tag("/images/commons/sections/no-img.jpg", :width => 120)
+                        image_tag("/images/commons/sections/no-img.jpg", :width => 120 , :id => ancora)
                       end
                     else
-                      image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 25)))
+                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.titolo, :length => 25)))
                     end
                 %>
               </td>
+              <!-- titolo  -->
+              <td width="470" align="left" valign="top">
+                <font style="font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#003548; text-align: justify;">
+                  <strong> <%= articolo.titolo %>
+                  </strong> </font><br/>
+              </td>
+            </tr>
+            <tr>
+              <!--  riga autore  -->
+              <td width="470" align="right" valign="top">
+                <font style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#333333; line-height:15px; text-decoration: underline; font-style: italic;">
+                  <strong> <%= image_tag("/images/ico/pen24.png", :border => 0) %> <%= articolo.author %> </strong>
+                </font>
+              </td>
+            </tr>
+            <tr>
+              <!-- riga riassunto -->
+              <td width="580" colspan="2">
+                <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#000000; line-height:18px; ">
+                  <%= articolo.riassunto %>
+                </font><br/>
+              </td>
+            </tr>
+          </table>
+          <!--fine tabella contenuti -->
+          <!-- pulsante vedi -->
+          <table width="580" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td width="580" height="33" align="right" valign="top">
+                <%= image_tag("/images/commons/btn_news_y.gif", :width => 107, :height => 29, :alt => 'vedi articolo') %>
 
-              <!-- titolo -->
-              <td width="480" align="left" valign="top">
-                <table width="474" border="0" cellpadding="0" cellspacing="0">
-                  <tr>
-                    <td width="474" align="left" valign="top">
-                      <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#333333;">
-                        <strong> <%= articolo.titolo %> <a id="<%= ancora %>">&nbsp;</a>
-                        </strong> </font><br/>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td width="474" align="right" valign="middle">
-                      <font style="font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#333333; line-height:1em;">
-                        <strong> <%= articolo.author %> </strong> </font>
-                    </td>
-                  </tr>
-                </table>
-                <table width="600" border="0" cellpadding="0">
-                  <tr>
-                    <td width="600" bgcolor="#bc8f8f" border="0" cellpadding="0" cellspacing="0" colspan="2">
-                      <br/>
-                      <font style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#333333;">
-                        <%= articolo.riassunto %>
-                      </font><br/><br/>
-                    </td>
-                  </tr>
-                </table>
-                <table width="380" border="0" cellpadding="0" cellspacing="0">
-                  <tr>
-                    <td width="380" align="right" valign="top">
-                      <a target="_blank" href="http://news.groupon.it/c/r?EMID=09A030C73VJ1A1T1U5804PCVH007HNNIB&RED=http%3A%2F%2Fwww.groupon.it%2Flp%2FPK9%2Findex.php%3Fdealid%3D15949601%26nlp%3D%26CID%3DIT_CRM_1_0_0_11%26a%3D1669" style="font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#ffffff; text-decoration:none;"><font style="font-family:Arial, Helvetica, sans-serif; font-size:13px; font-weight:bold; color:#317ca6;"><strong><img src="http://static.it.groupon-content.net/newsletter_ums/basic/btn_view_it_IT.gif" width="107" height="29" border="0" style="display:block;" alt="Vedi &raquo;"/></strong></font></a>
-                    </td>
-                  </tr>
-                </table>
               </td>
             </tr>
           </table>
@@ -93,3 +107,4 @@ In questa pagina:
       </tr>
     </table>
 <% end %>
+<!-- fine sezione loop articoli -->
