--- a/app/views/editorial/_viste_non_utilizzate/_save/ediz_nocontents.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/ediz_nocontents.html.erb
@@ -120,6 +120,13 @@
 
                               </td>
                             </tr>
+                            <!-- test colori -->
+                            <tr>
+                              <td width="612" align="center" valign="center">
+                                <%= image_tag("/images/commons/news.png", :width => 612) %>
+
+                              </td>
+                            </tr>
                           </table>
                           <!--fine  dicitura indice -->
                         </td>
