--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,8 +1,31 @@
 <h2><%=l(:label_project_new)%></h2>
 
+
 <% labelled_tabular_form_for @project do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_create) %>
 <%= submit_tag l(:button_create_and_continue), :name => 'continue' %>
 <%= javascript_tag "Form.Element.focus('project_name');" %>
 <% end %>
+
+
+<div class="box">
+  <% if !@managers.nil? %>
+    <h5>
+      <p class="power_user">Lista Manager che accedono all'edizione: <b><%= @managers.count() %></b></p>
+    </h5>
+    <% @managers.each do |usr| %>
+      <div class="icon icon-man"><%= link_to usr, user_path(usr) %></div>
+    <% end
+  end
+  if !@authors.nil? %>
+<hr>
+    <h5>
+      <p class="redattore">Lisat dei Redattori che possono partecipare alla realizzazione degli articoli: <b><%= @authors.count() %></b></p>
+    </h5>
+    <% @authors.each do |usr| %>
+      <div class="icon icon-auth"><%= link_to usr, user_path(usr) %></div>
+    <% end
+  end %>
+<br />
+</div>
