--- a/app/views/editorial/edizione.copynew.html.erb
+++ b/app/views/editorial/edizione.copynew.html.erb
@@ -1,4 +1,3 @@
-
 <style type="text/css">
         /* Backgrounds */
     .email_background {
@@ -40,7 +39,7 @@
   <tr>
     <td width="242" height="110" align="left" valign="top">
       <!-- logo -->
-      <%= link_to image_tag("/images/commons/fiscosport_news.jpg", :border => 0, :controller => 'editorial', :action => 'home') %>
+      <%= link_to(image_tag("/images/commons/fiscosport_news.jpg", :border => 0), :controller => 'editorial', :action => 'home') %>
 
     <td align="left" valign="top">
       <!-- tabella di 2 righe per il testo -->
@@ -91,8 +90,7 @@
 <!--fine  dicitura indice -->
 <!-------------------------------------------------------------------->
 <!-- inizio loop sezione indice -->
-<% last_tops=0
-   ancora ="" %>
+<% last_tops=0 %>
 <% @art.each do |nart| %>
     <% ancora = h(truncate(nart.titolo, :length => 30).to_slug) %>
 
