--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -284,7 +284,41 @@
     color: #5f0100;
     position: relative;
 }
+.fs-logged2{
+    width: 100%;
+    border: dotted 1px #d2b48c;
 
+}
+.fs-logged2 ul{
+    width: 210px;
+    float:left;
+}
+.fs-logged2 ul li{
+       color: #000000;
+        font-size: 10px;
+    font-style: italic;
+
+}
+.fs-logged2 a,
+.fs-logged2 a:link,
+.fs-logged2 a:visited,
+.fs-logged2 a:hover{
+text-decoration: none;
+    font-style: normal;
+   color: #000000;
+    font-size: 8px;
+
+}
+.fs-logged2-ico {
+    float: right;
+    width:50px;
+    border: solid 1px #008b2b;
+}
+.fs-logged1 {
+    height: 50px;
+    overflow: hidden;
+    border: solid 1px #0000CC;
+}
 /*  fine  3 -  -  -  -  -  -   tramenu   terzo blocco   -  -  -  -  -  -  */
 
 /* pagina chi siamo */
