--- a/app/views/editorial/edizione.html.erb
+++ b/app/views/editorial/edizione.html.erb
@@ -1,4 +1,4 @@
-<style type="text/css">
+<style type="text/css" xmlns="http://www.w3.org/1999/html">
         /* Backgrounds */
     .email_background {
         width: 640px;
@@ -24,7 +24,17 @@
   </td>
 </tr>
 <tr>
-  <td><img src="/images/commons/top_fade.jpg" width="640" height="20" border="0"/></td>
+  <td>
+    <table cellpadding="0" cellspacing="0" border="0" width="640" style="font-size:0;">
+      <tr>
+        <td>
+
+          <img src="/images/commons/top_fade.jpg" width="640" height="20" border="0"/>
+        </td>
+      </tr>
+    </table>
+
+  </td>
 </tr>
 <tr>
   <td align="center" background="/images/commons/email_bg.jpg" class="email_background">
@@ -46,7 +56,7 @@
       <table width="318" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td height="50" align="left" valign="center" style="border-bottom:1px solid #1C6693;">
-            <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:14px; color:#333333; line-height: 18px; ">
+            <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:12px; color:#333333; line-height: 18px; ">
               Newsletter riservata a :<span style="font-size: 18px;">
                             <%= User.current.firstname %> &nbsp; <%= User.current.lastname %></span>
             </font></td>
@@ -62,20 +72,51 @@
   </tr>
 </table>
 <!-- fine sezione con logo e nomeutente -->
-<!-- inizio visibile solo se associato (nb togliere il parametro height=30) -->
-<table width="560" border="0" cellpadding="0" cellspacing="0">
+<!-- inizio visibile solo se associato o affiliato-->
+<% if User.current.associazione() %>
+    <table width="560" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+        <td width="505" valign="bottom" bgcolor="#ffffff" height="50">
+          <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:12px; color:#333333; line-height:18px; font-weight: bold;">
+            Associato
+            a:  <%= link_to h(User.current.associazione()), asso_path(User.current.associazione()), :style => "text-decoration:none;" %>
+          </font>
+        </td>
+        <td width="55" valign="bottom" align="right">
+          <%= image_tag "/images/banners/assos/#{ User.current.asso.logo}", :width => 50, :height => 50, :border => 0 %>
+        </td>
+      </tr>
+    </table>
+<% else %>
+    <% if User.current.sigla_tipo() %>
+        <table width="560" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td width="505" valign="bottom" bgcolor="#ffffff" height="50">
+              <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:11px; color:#333333; line-height:18px; font-weight: bold;">
+                Affiliato
+                a: <%= link_to h(User.current.sigla_tipo()), asso_path(User.current.sigla_tipo()), :style => "text-decoration:none;" %>
+              </font>
+            </td>
+            <td width="55" valign="bottom" align="right">
+              <%= image_tag "/images/banners/ico/fs.jpg", :width => 50, :height => 50, :border => 0 %>
+            </td>
+          </tr>
+        </table>
+    <% end %>
+<% end %>
+<!-- fine riga visibile solo se associato o è affiliato'  / sotto un'ummagine di spazio -->
+<table width="560" border="0" cellpadding="0" cellspacing="0" style="font-size:0;">
   <tr>
-    <td width="505" valign="center" bgcolor="#ffffff" height="50">
-      <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:11px; color:#333333; line-height:18px; font-weight: bold;">
-        riga che appare solo se l'utente è associato quindi la didascalia e l'immagine </font>
+    <td width="560" valign="bottom" bgcolor="#ffffff" height="6">
+      <%= image_tag "/images/commons/email_spacer_colors.jpg", :width => 560, :height => 6, :border => 0 %>
     </td>
-    <td width="55" valign="center" align="right">
-      <font style="font-family: Tahoma,Arial, Helvetica, sans-serif; font-size:8px;">
-        icon <br/>50 x 50</font>
+  </tr>
+  <tr>
+    <td width="560" valign="bottom" bgcolor="#ffffff" height="35">
+      <%= image_tag "/images/commons/email_spacer.jpg", :width => 560, :height => 35, :border => 0 %>
     </td>
   </tr>
 </table>
-<!-- fine riga visibile solo se associato -->
 <!--inizio dicitura indice -->
 <table width="560" border="0" cellpadding="0" cellspacing="0">
   <tr>
@@ -147,10 +188,22 @@
 <% end %>
 <!-- fine loop sezione indice -->
 <!------------------------------------------------------------------------->
+<!-- spazio -->
+<table width="560" border="0" cellpadding="0" cellspacing="0" style="font-size:0;">
+  <tr>
+    <td height="33">
+    </td>
+  </tr>
+  <tr>
+    <td width="560" valign="bottom" bgcolor="#ffffff" height="35">
+      <%= image_tag "/images/commons/email_spacer.jpg", :width => 560, :height => 35, :border => 0 %>
+    </td>
+  </tr>
+</table>
 <!--inizio dicitura sommario  -->
 <table width="560" border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="33">
+    <td height="16">
     </td>
   </tr>
   <tr>
@@ -220,7 +273,7 @@
             <tr>
               <td width="560" height="33" align="right" valign="top">
 
-<%= link_to (image_tag("/images/commons/btn_news_y.gif", :width => 107, :height => 29, :alt => 'vedi articolo'), url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug) , :escape => false), :target => '_blank') %>
+                <%= link_to (image_tag("/images/commons/btn_news_y.gif", :width => 107, :height => 29, :alt => 'vedi articolo'), url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false), :target => '_blank') %>
 
               </td>
             </tr>
