test per utenti su mail in project.rb

--- a/app/views/editorial/edizionex.html.erb
+++ b/app/views/editorial/edizionex.html.erb
@@ -15,4 +15,7 @@ In questa pagina:
   starting newsletter for smtp
 
 </div>
-<%= @news %>
+<%# @prj.testuser(18110) %>
+<%# @project.testuser(18110) %>
+<%# @news %>
+<%= @prj.newsletter_smtp(18110) %>
