--- a/app/views/editorial/edizione_newsletter.erb
+++ b/app/views/editorial/edizione_newsletter.erb
@@ -1,7 +1,7 @@
 <div class="fs-layout-cell fs-content clearfix">
 
 <div id="fs-edizione">
-    <%= link_to(image_tag("/images/ico/newsletter.png"), url_for(:controller => 'editorial', :action => "edizione_newsletter", :escape => false)) %>
+    <%= link_to(image_tag("/images/ico/articoli.png"), url_for(:controller => 'editorial', :action => "edizione", :escape => false)) %>
   <%= @project.description %>
 
 </div>
@@ -311,4 +311,5 @@
 </td>
 </tr>
 </table>
+</div>
 <%= render :partial => 'blocco_sidebar1' %>
