--- a/app/views/editorial/edizioni.html.erb
+++ b/app/views/editorial/edizioni.html.erb
@@ -1,9 +1,34 @@
-<h2><%=l(:list_edizioni)%></h2>
-  In questa pagina:
-  <ul> 
-    <li>lista delle edizioni</li>
-    <li>filtraggio sul contenuto</li>
-    <li>Vista statistica: sezioni, numero articoli</li>
-    <li>LINK: alle edizioni</li>
-    <li>LINK: alle sezioni</li>
-  </ul> 
+<script>
+    $(document).ready(function () {
+        $("#accordion").accordion({heightStyle:"content" ,autoHeight: false });
+    });
+</script>
+<% aold = 0 %>
+<% acur = 0 %>
+<% x= false %>
+
+<div class="fs-blockcontent" style="width:676px; float: left; padding-top:35px;">
+   <div id="accordion">
+    <% @projects.each do |prj| %>
+        <% acur = prj.data_dal.strftime("%Y").to_i %>
+        <% if (acur != aold) && x %>
+            </div>
+        <% end %>
+        <% if acur != aold %>
+            <h4 style="font-weight: bold;">Edizioni nell' anno <%= acur.to_s %> </h4>
+            <div>
+        <% end %>
+        <div class="fs-edizioni-all">
+               <div class="fs-layout-cell layout-item-0">
+                 <div class="fs-postheader fs-blockheader-ediz-all">Edizione <%= link_to(h(prj.description), url_for(:controller => 'editorial', :action => "edizione", :id => prj.id, :escape => false)) %>
+                 </div>
+               </div>
+             </div>
+        <% aold = acur %>
+        <% x = true %>
+    <% end %>
+    </div>
+  </div>
+</div>  <!-- div in più ma ok: loop in uscita -->
+<%= render :partial => 'blocco_sidebar1' %>
+
