--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,6 +221,7 @@ ul.fs-vmenu a
    margin: 10px 0 0;
    font-size: 16px;
    font-family:  Arial, Helvetica, Sans-Serif;
+    line-height: 2em;
   /* font-variant: small-caps;
    text-align: center;    */
 }
