--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -7,9 +7,13 @@
         <div style="width:100%;">
           <div class="fs-image-caption-wrapper-full">
             <%= if articolo.immagine_url.nil?
-                  '<h3>no image</h3>'
+                  if FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")
+                    image_tag("/images/commons/sections/#{articolo.top_section.immagine}")
+                  else
+                    image_tag("/images/commons/sections/no-img.jpg")
+                  end
                 else
-                  image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 12)))
+                  image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 25)))
                 end
             %>
           </div>
@@ -52,8 +56,8 @@
             </div>
             <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
           </div>
-          <div class="fs-riassunto-full">
-            <%= h(smart_truncate(articolo.riassunto, 200)) %></div>
+          <div class="fs-riassunto-full"> <p>
+            <%= h(smart_truncate(articolo.riassunto, 200)) %></p></div>
           <br/>
         </div>
         <div class="clearfix">&nbsp; <br />&nbsp; <br /></div>
@@ -63,9 +67,11 @@
           </div>
         </div>
         <%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key, :class => "fs-back" %>
+        <!--
         <div class="fs-comments">
           <span class="fs-postcommentsicon"> Scrivi un commento </span>::<span class="fs-postcommentsicon"> Leggi i commenti </span>
         </div>
+        -->
     <% else %>
         <br/>
         <p class="nodata"><%= l(:label_no_data) %></p>
